<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.hpi.bpt</groupId>
  <artifactId>scylla</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>scylla</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
	<dependency>
	    <groupId>org.jdom</groupId>
	    <artifactId>jdom2</artifactId>
	    <version>2.0.6</version>
	</dependency>
	<dependency>
	    <groupId>org.deckfour</groupId>
	    <artifactId>openxes</artifactId>
	    <version>20160212</version>
	    <scope>system</scope>
	    <systemPath>${pom.basedir}/lib/OpenXES-20160212.jar</systemPath>
	</dependency>
	<dependency>
	    <groupId>org.deckfour</groupId>
	    <artifactId>openxes-xstream</artifactId>
	    <version>20160212</version>
	    <scope>system</scope>
	    <systemPath>${pom.basedir}/lib/OpenXES-XStream-20160212.jar</systemPath>
	</dependency>
	<dependency>
	    <groupId>org.deckfour</groupId>
	    <artifactId>ospex</artifactId>
	    <version>1.0</version>
	    <scope>system</scope>
	    <systemPath>${pom.basedir}/lib/Spex.jar</systemPath>
	</dependency>
	<dependency>
	    <groupId>desmoj</groupId>
	    <artifactId>desmoj</artifactId>
	    <version>2.5.1</version>
	    <scope>system</scope>
	    <systemPath>${pom.basedir}/lib/desmoj-2.5.1c-bin.jar</systemPath>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
